fix: Update z-index

--- a/src/javascript/JContent/actions/createFolderAction/CreateFolderDialog/CreateFolderDialog.scss
+++ b/src/javascript/JContent/actions/createFolderAction/CreateFolderDialog/CreateFolderDialog.scss
@@ -2,6 +2,10 @@
     min-width: 600px;
 }
 
+.dialogRoot.dialogRoot {
+    z-index: var(--ce-dialog-z-index);
+}
+
 .error.error {
     color: var(--color-danger);
 }
